--- a/src/Pages/06-Detail Modul Page/DetailModul.css
+++ b/src/Pages/06-Detail Modul Page/DetailModul.css
@@ -25,3 +25,17 @@
     border-radius: 10px;
     box-shadow: 1px 3px rgb(142, 141, 141);
 }
+
+@media screen and (min-width: 767px) and (max-width: 1024px){
+    iframe{
+        width: 350px;
+        height: 175px;
+    }
+}
+
+@media screen and (min-width: 320px) and (max-width: 766px){
+    iframe{
+        width: 300px;
+        height: 150px;
+    }
+}
